[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/resources/fonts/digits_small_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://source/scripts/visuals/additional_moves_labels.gd" type="Script" id=2]

[node name="AdditionalMovesLabels" type="HBoxContainer"]
self_modulate = Color( 0.376471, 0.403922, 0.482353, 1 )
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
script = ExtResource( 2 )

[node name="PlusLabel" type="Label" parent="."]
margin_top = 13.0
margin_right = 18.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "+"

[node name="CountLabel" type="Label" parent="."]
margin_left = 22.0
margin_top = 13.0
margin_right = 48.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "4 "

[node name="MovesLabel" type="Label" parent="."]
margin_left = 52.0
margin_top = 13.0
margin_right = 145.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 1 )
text = "moves"
